--- a/ts.html
+++ b/ts.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<img style="float: left; position: absolute; top: 0px;" src="images/v_grd_n2.png" alt="vert gratient" width="150" height="1100">
+<img style="float: left; position: absolute; top: 0px;" src="images/v_grd_n2.png" alt="vert gradient" width="150" height="1100">
 <img style="margin-left: 150px;" src="images/JJWBnr_n.png" alt="banner" width="900" height="150">
     
     
