added call to advent

--- a/ts.html
+++ b/ts.html
@@ -48,8 +48,8 @@
     <div id="slides" style="margin-left: 200px; margin-top: 100px; slidesjs-index="0">
 		
         <a  href="pub_data_view.html?song=a_parting_blessing"><img src="images/a_parting_blessing.png" alt="" width="500" ></a>
-        <a  href="call_to_advent.html"><img src="images/call_to_advent.png" alt="" width="500" ></a>
-        <a  href="call_to_lent.html"><img src="images/call_to_lent.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=call_to_advent"><img src="images/call_to_advent.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=call_to_lent"><img src="images/call_to_lent.png" alt="" width="500" ></a>
 		
     </div>
         
