added call to lent.json

--- a/ts.html
+++ b/ts.html
@@ -45,7 +45,7 @@
             <h2 class=cat> Top Sellers </h2><br />
 	    <p  class=dir> Select a piece from the slider below, and click on it for more information or to listen</p>
   
-    <div id="slides" style="margin-left: 200px; margin-top: 100px; slidesjs-index=0>
+    <div id="slides" style="margin-left: 200px; margin-top: 100px;" slidesjs-index=0>
 		
         <a  href="pub_data_view.html?song=a_parting_blessing"><img src="images/a_parting_blessing.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=call_to_advent"><img src="images/call_to_advent.png" alt="" width="500" ></a>
