--- a/gs.html
+++ b/gs.html
@@ -49,12 +49,11 @@
   
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
 		
-        <a  href="a_parting_blessing.html"><img src="images/carol_for_two_seasons.png" alt="" width="500" ></a>
-        <a  href="call_to_advent.html"><img src="images/in_gods_name.png" alt="" width="500" ></a>
-        <a  href="call_to_lent.html"><img src="images/no_hands_but_yours.png" alt="" width="500" ></a>
-	<a  href="a_parting_blessing.html"><img src="images/with_peace_and_joy.png" alt="" width="500" ></a>
-        <a  href="call_to_advent.html"><img src="images/there_is_a_balm.png" alt="" width="500" ></a>
-       
+        <a  href="pub_data_view.html?song=carol_for_two_seasons"><img src="images/carol_for_two_seasons.png" alt="" width="500" ></a>
+        <a  href "pub_data_view.html?song=in_gods_name"><img src="images/in_gods_name.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=no_hands_but_yours"><img src="images/no_hands_but_yours.png" alt="" width="500" ></a>
+	    <a  href="pub_data_view.html?song=with_peace_and_joy"><img src="images/with_peace_and_joy.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=there_is_a_balm"><img src="images/there_is_a_balm.png" alt="" width="500" ></a>
     </div>
         
 </div>          
