--- a/pub_data_view.html
+++ b/pub_data_view.html
@@ -34,7 +34,7 @@
                     Your browser does not support the audio element.
                 </audio></span>
                 <br />
-                or play Youtube video
+                or play Youtube video if available
                 <img id="gotoPrevious" style="float: right; margin-right:200px; margin-top: -50px; cursor: pointer;" src="images/return.png" alt="return" width="64">
 
 
