various fixes to rr.html

--- a/rr.html
+++ b/rr.html
@@ -48,9 +48,9 @@
   
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
 		
-        <a  href="a_parting_blessing.html"><img src="sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
-        <a  href="call_to_advent.html"><img src="images/walk_with_us.png" alt="" width="500" ></a>
-        <a  href="call_to_lent.html"><img src="images/i_lift_mine_eyes.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=sometimes_a_light_surprises">"><img src="sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
+        <a  href="pub_data_view.html?song=walk_with_us_holy_god"><img src="images/walk_with_us_holy_god.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=i_lift_mine_eyes"><img src="images/i_lift_mine_eyes.png" alt="" width="500" ></a>
 		
     </div>
         
