--- a/rr.html
+++ b/rr.html
@@ -49,7 +49,7 @@
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
 		
         <a  href="pub_data_view.html?song=sometimes_a_light_surprises">"><img src="sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
-        <a  href="pub_data_view.html?song=walk_with_us_holy_god"><img src="images/walk_with_us_holy_god.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=walk_with_us,_holy_god"><img src="images/walk_with_us_holy_god.png" alt="Walk with Us, Holy God" width="500" ></a>
         <a  href="pub_data_view.html?song=i_lift_mine_eyes"><img src="images/i_lift_mine_eyes.png" alt="" width="500" ></a>
 		
     </div>
