--- a/fa.html
+++ b/fa.html
@@ -47,9 +47,9 @@
   
     <div id="slides" style="margin-left: 200px; margin-top: 100px;" slidesjs-index=0>
 		
-        <a  href="a_parting_blessing.html"><img src="images/sing_hallelujah.png" alt="" width="500" ></a>
-        <a  href="call_to_advent.html"><img src="images/ye_people_of_god.png" alt="" width="500" ></a>
-        <a  href="call_to_lent.html"><img src="images/gospodi_pomilui.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=sing_hallelujah"><img src="images/sing_hallelujah.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=ye_people_of_god"><img src="images/ye_people_of_god.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=gospodi_pomilui.html"><img src="images/gospodi_pomilui.png" alt="" width="500" ></a>
 		
     </div>
         
