fixed fa.html line 52

--- a/fa.html
+++ b/fa.html
@@ -49,7 +49,7 @@
 		
         <a  href="pub_data_view.html?song=sing_hallelujah"><img src="images/sing_hallelujah.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=ye_people_of_god"><img src="images/ye_people_of_god.png" alt="" width="500" ></a>
-        <a  href="pub_data_view.html?song=gospodi_pomilui.html"><img src="images/gospodi_pomilui.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=gospodi_pomilui"><img src="images/gospodi_pomilui.png" alt="" width="500" ></a>
 		
     </div>
         
