--- a/ssc.html
+++ b/ssc.html
@@ -49,9 +49,9 @@
   
     <div id="slides" style="margin-left: 200px; margin-top: 220px;" slidesjs-index=0>
 		
-        <a  href="a_parting_blessing.html"><img src="images/come_join_in_singing.png" alt="" width="500" ></a>
-        <a  href="call_to_advent.html"><img src="images/my_spirit_rejoices.png" alt="" width="500" ></a>
-        <a  href="call_to_lent.html"><img src="images/a_simple_alleluia.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=come_join_in_singing"><img src="images/come_join_in_singing.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=my_spirit_rejoices"><img src="images/my_spirit_rejoices.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=a_simple_alleluia"><img src="images/a_simple_alleluia.png" alt="" width="500" ></a>
 		
     </div>
         
