entered corrections and 2 json files

--- a/fa.html
+++ b/fa.html
@@ -3,7 +3,7 @@
     
 <head>
 <meta charset="UTF-8">
-<title>J. Jerome Williams Choral Music Festive Anthems</title>
+<title>J. Jerome Williams Choral - Music Festive Anthems</title>
 <link href="dss_jjw2.css" type="text/css" rel="STYLESHEET">
 
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
