entered json files

--- a/gs.html
+++ b/gs.html
@@ -3,7 +3,7 @@
     
 <head>
 <meta charset="UTF-8">
-<title>J. Jerome Williams Choral Music GENERAL AND SEASONAL ANTHEMS AND SERVICE MUSIC
+<title>J. Jerome Williams Choral Music - General and Seasonal Anthems AND Service Music
 
 </title>
 <link href="dss_jjw2.css" type="text/css" rel="STYLESHEET">
@@ -44,7 +44,7 @@
 	    <a style="position: absolute; margin-top: 20px; margin-left: 160px; font-size: 1em; font-weight: 900; color:#639BF1;"
                 href=index.html>HOME MENU
             </a> 
-            <h2 class=cat> GENERAL AND SEASONAL ANTHEMS AND SERVICE MUSIC </h2>
+            <h2 class=cat> General and Seasonal Anthems and Service Music </h2>
 	    <p  class=dir style="margin-left: 130px; top: 100px;"><br /> Select a piece from the slider below, and click on it for more information or to listen</p>
   
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
