--- a/ssc.html
+++ b/ssc.html
@@ -30,8 +30,8 @@
 </head>
 
 <body>
-<img style="float: left; position: absolute; top: 0px;" src="images/v_grd_n2.png" alt="vert gradient" width="150" height="1200">
-<img style="margin-left: 150px;" src="images/JJWBnr_n.png" alt="banner" width="900" height="150">
+<img style="float: left; position: absolute; top: 0px;" src="images/v_grd_n2.png" alt="vert gradient" width="124" height="1200">
+<img style="margin-left: 124px;" src="images/JJWBnr_n.png" alt="banner" width="900" height="150">
     
     
 <div
@@ -39,12 +39,12 @@
            position: absolute;
            width: 900px;
            height: 1010px;
-           margin-left: 150px;
+           margin-left: 124px;
            margin-top: -5px;">
 	    <a style="position: absolute; margin-top: 20px; margin-left: 160px; font-size: 1em; font-weight: 900; color:#639BF1;"
                 href=index.html>HOME MENU
             </a> 
-            <h2 class=cat> SECULAR SCHOOL CHORALS </h2>
+            <h2 class=cat> SECULAR / SCHOOL CHORALS </h2>
 	    <p  class=dir style="margin-left: 130px; top: 100px;"><br /> Select a piece from the slider below, and click on it for more information or to listen</p>
   
     <div id="slides" style="margin-left: 200px; margin-top: 220px;" slidesjs-index=0>
