--- a/rr.html
+++ b/rr.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<img style="float: left; position: absolute; top: 0px;" src="images/v_grd_n2.png" alt="vert gradient" width="124" height="1200">
+<img style="float: left; position: absolute; top: 0;" src="images/v_grd_n2.png" alt="vert gradient" width="124" height="1200">
 <img style="margin-left: 124px;" src="images/JJWBnr_n.png" alt="banner" width="900" height="150">
     
     
@@ -48,7 +48,7 @@
   
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
 		
-        <a  href="pub_data_view.html?song=sometimes_a_light_surprises"><img src="sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
+        <a  href="pub_data_view.html?song=sometimes_a_light_surprises"><img src="images/sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
         <a  href="pub_data_view.html?song=walk_with_us,_holy_god"><img src="images/walk_with_us_holy_god.png" alt="Walk with Us, Holy God" width="500" ></a>
         <a  href="pub_data_view.html?song=i_lift_mine_eyes"><img src="images/i_lift_mine_eyes.png" alt="" width="500" ></a>
 		
