--- a/up1.html
+++ b/up1.html
@@ -56,7 +56,13 @@
         <a  href="pub_data_view.html?song=god_is_wisdom_god_is_love"><img src="images/god_is_wisdom_god_is_love.png" alt="" width="500" ></a>
 
         <a  href="pub_data_view.html?song=fantasy_on_joy_to_the_world"><img src="images/fantasy_on_joy_to_the_world.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=and_this_shall_be_his_name"><img src="images/and_this_shall_be_his_name.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=carol_of_bells_and_joy"><img src="images/carol_of_bells_and_joy.png" alt="" width="500" ></a>
 
+        <a  href="pub_data_view.html?song=early_on_a_winters_morn"><img src="images/early_on_a_winters_morn.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=at_the_gate_of_heaven"><img src="images/at_the_gate_of_heaven.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=wilt_thou_forgive"><img src="images/wilt_thou_forgive.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=merry_christmas_fanfare_and_round"><img src="images/merry_christmas_fanfare_and_round.png" alt="" width="500" ></a>
     </div>
         
 </div>          
