--- a/up.html
+++ b/up.html
@@ -44,10 +44,10 @@
 	    <a style="position: absolute; margin-top: 20px; margin-left: 160px; font-size: 1em; font-weight: 900; color:#639BF1;"
                 href=index.html>HOME MENU
             </a> 
-            <h2 class=cat> Unpublished or Out of Print Music </h2>
-	    <p  class=dir style="margin-left: 130px; top: 100px;"><br /> Select a piece from the slider below, and click on it for more information or to listen</p>
+            <h2 class=cat> Unpublished or Out of Print Music  <span style="font-size: 70%;"> <br />(email jjerome56@gmail.com for information)</span></h2>
+	    <p  class=dir style="margin-left: 130px; top: 100px;"><br /><br /> Select a piece from the slider below, and click on it for more information or to listen</p>
   
-    <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
+    <div id="slides" style="margin-left: 200px; margin-top: 230px;" slidesjs-index=0>
 		
         <a  href="pub_data_view.html?song=the_circle"><img src="images/the_circle.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=when_i_can_read_my_title_clear"><img src="images/when_i_can_read_my_title_clear.png" alt="" width="500" ></a>
