add call to praise and go out with joy

--- a/up.html
+++ b/up.html
@@ -54,7 +54,7 @@
         <a  href="pub_data_view.html?song=bound_for_the_promised_land"><img src="images/bound_for_the_promised_land.png" alt="" width="500" ></a>
 	    <a  href="pub_data_view.html?song=cross_of_jesus"><img src="images/cross_of_jesus.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=god_is_wisdom_god_is_love"><img src="images/god_is_wisdom_god_is_love.png" alt="" width="500" ></a>
-
+        <a  href="pub_data_view.html?song=and_this_shall_be_his_name"><img src="images/and_this_shall_be_his_name.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=fantasy_on_joy_to_the_world"><img src="images/fantasy_on_joy_to_the_world.png" alt="" width="500" ></a>
 
     </div>
