--- a/gs.html
+++ b/gs.html
@@ -52,7 +52,8 @@
         <a  href="pub_data_view.html?song=carol_for_two_seasons"><img src="images/carol_for_two_seasons.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=in_gods_name"><img src="images/in_gods_name.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=no_hands_but_yours"><img src="images/no_hands_but_yours.png" alt="" width="500" ></a>
-	    <a  href="pub_data_view.html?song=with_peace_and_joy"><img src="images/with_peace_and_joy.png" alt="" width="500" ></a>
+	    <a  href="pub_data_view.html?song=call_to_praise"><img src="images/call_to_praise.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=go_out_with_joy"><img src="images/go_out_with_joy.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=there_is_a_balm"><img src="images/there_is_a_balm.png" alt="" width="500" ></a>
     </div>
         
