--- a/pp.html
+++ b/pp.html
@@ -48,13 +48,12 @@
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
 		
         <a  href="pub_data_view.html?song=an_instrument_of_thy_peace"><img src="images/an_instrument_of_thy_peace.png" alt="" width="500" ></a>
-        <a  href="pub_data_view.html?song=there_came_a_man"><img src="images/there_came_a_man.png" alt="" width="500" ></a>
-        
+        <a  href="pub_data_view.html?song=early_on_a_winters_morn"><img src="images/early_on_a_winters_morn.png" alt="" width="500" ></a>
     </div>
         
 </div>          
      <div class=cw style="margin-top: 1005px;">
-        <p>	&#169 2014 J. Jerome Williams, Valdese, NC
+        <p>	&#169 2015 J. Jerome Williams, Valdese, NC
 	<img style="float: right; margin-top: 5px;" src="images/dss.png" alt="DDS Logo" width="150">
         </p>
     </div>
