--- a/rr.html
+++ b/rr.html
@@ -51,12 +51,12 @@
         <a  href="pub_data_view.html?song=sometimes_a_light_surprises"><img src="images/sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
         <a  href="pub_data_view.html?song=walk_with_us,_holy_god"><img src="images/walk_with_us_holy_god.png" alt="Walk with Us, Holy God" width="500" ></a>
         <a  href="pub_data_view.html?song=i_lift_mine_eyes"><img src="images/i_lift_mine_eyes.png" alt="" width="500" ></a>
-		
+		<a  href="pub_data_view.html?song=there_came_a_man"><img src="images/there_came_a_man.png" alt="" width="500" ></a>
     </div>
         
 </div>          
      <div class=cw style="margin-top: 1005px;">
-        <p>	&#169 2014 J. Jerome Williams, Valdese, NC
+        <p>	&#169 2015 J. Jerome Williams, Valdese, NC
 	<img style="float: right; margin-top: 5px;" src="images/dss.png" alt="DDS Logo" width="150">
         </p>
     </div>
