--- a/gs.html
+++ b/gs.html
@@ -48,7 +48,13 @@
 	    <p  class=dir style="margin-left: 130px; top: 100px;"><br /> Select a piece from the slider below, and click on it for more information or to listen</p>
   
     <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
-		
+
+
+
+        <a  href="pub_data_view.html?song=an_instrument_of_thy_peace"><img src="images/an_instrument_of_thy_peace.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=sometimes_a_light_surprises"><img src="images/sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
+        <a  href="pub_data_view.html?song=walk_with_us,_holy_god"><img src="images/walk_with_us_holy_god.png" alt="Walk with Us, Holy God" width="500" ></a>
+        <a  href="pub_data_view.html?song=there_came_a_man"><img src="images/there_came_a_man.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=carol_for_two_seasons"><img src="images/carol_for_two_seasons.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=in_gods_name"><img src="images/in_gods_name.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=no_hands_but_yours"><img src="images/no_hands_but_yours.png" alt="" width="500" ></a>
@@ -59,7 +65,7 @@
         
 </div>          
      <div class=cw style="margin-top: 1005px;">
-        <p>	&#169 2015 J. Jerome Williams, Valdese, NC
+        <p>	&#169 2018 J. Jerome Williams, Valdese, NC
 	<img style="float: right; margin-top: 5px;" src="images/dss.png" alt="DDS Logo" width="150">
         </p>
     </div>
