--- a/rr.html
+++ b/rr.html
@@ -46,17 +46,19 @@
 
 	    <p  class=dir><br /><br /> Select a piece from the slider below, and click on it for more information or to listen</p>
   
-    <div id="slides" style="margin-left: 200px; margin-top: 200px;" slidesjs-index=0>
-		
-        <a  href="pub_data_view.html?song=sometimes_a_light_surprises"><img src="images/sometimes_a_light_surprises.png" alt="Sometimes a Light Surprises" width="500" ></a>
-        <a  href="pub_data_view.html?song=walk_with_us,_holy_god"><img src="images/walk_with_us_holy_god.png" alt="Walk with Us, Holy God" width="500" ></a>
+    <div id="slides" style="margin-left: 200px; margin-top: 200px;" >
+
+        <a  href="pub_data_view.html?song=merry_christmas_fanfare_and_round"><img src="images/Merry_Christmas_Fanfare_and_Round.jpg" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=hark!_hear_the_bells"><img src="images/hark!_hear_the_bells_a-c.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=hark!_hear_the_bells_ACC"><img src="images/hark!_hear_the_bells_acc.png" alt="" width="500" ></a>
+        <a  href="pub_data_view.html?song=early_on_a_winters_morn"><img src="images/early_on_a_winters_morn.png" alt="" width="500" ></a>
         <a  href="pub_data_view.html?song=i_lift_mine_eyes"><img src="images/i_lift_mine_eyes.png" alt="" width="500" ></a>
-		<a  href="pub_data_view.html?song=there_came_a_man"><img src="images/there_came_a_man.png" alt="" width="500" ></a>
+
     </div>
         
 </div>          
      <div class=cw style="margin-top: 1005px;">
-        <p>	&#169 2015 J. Jerome Williams, Valdese, NC
+        <p>	&#169 2018 J. Jerome Williams, Valdese, NC
 	<img style="float: right; margin-top: 5px;" src="images/dss.png" alt="DDS Logo" width="150">
         </p>
     </div>
