--- a/pp.html
+++ b/pp.html
@@ -6,7 +6,7 @@
 <title>J. Jerome Williams Choral Music - Pending Publications</title>
 <link href="dss_jjw2.css" type="text/css" rel="STYLESHEET">
 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
  
 <script src="js/jquery.slides.min.js"></script>
   
