--- a/fa.html
+++ b/fa.html
@@ -45,7 +45,7 @@
             <h2 class=cat> Festive Anthems </h2><br />
 	    <p  class=dir><br />  Select a piece from the slider below, and click on it for more information or to listen</p>
   
-    <div id="slides" style="margin-left: 150px; margin-top: 100px;" slidesjs-index=0>
+    <div id="slides" style="margin-left: 150px; margin-top: 100px;" >
 		
         <a  href="p-d-sing_hallelujah.html"><img src="images/sing_hallelujah.png" alt="" width="360" ></a>
         <a  href="p-d-ye_people_of_god.html"><img src="images/ye_people_of_god.png" alt="" width="360" ></a>
